...
                                </constraints>
                                <segments>
                                    <segment title="No"/>
                                    <segment title="Yes"/>
                                </segments>
                                <color key="tintColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
...
                                <rect key="frame" x="0.0" y="511" width="0.0" height="57"/>
                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Tap to play again" identifier="PlayAgainButton" label="Play Again"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Play Again">
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your question here." textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cAe-TN-xnk">
                                        <rect key="frame" x="0.0" y="364.5" width="320" height="110.5"/>
                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
...
                                <rect key="frame" x="-16" y="511" width="320" height="57"/>
                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Tap to Solve the Riddle" label="Solve the Riddle"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Solve the Riddle">
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyP-r8-vjO">
                                                        <rect key="frame" x="0.0" y="0.0" width="132" height="112"/>
                                                        <accessibility key="accessibilityConfiguration" hint="Double tap to enter zero" identifier="ZeroButton" label="Zero"/>
                                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="100"/>
                                                        <state key="normal" title="0">
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Py-Xx-OfE">
                                                        <rect key="frame" x="140" y="0.0" width="132" height="112"/>
                                                        <accessibility key="accessibilityConfiguration" hint="Double tap to enter One" identifier="OneButton" label="One"/>
                                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="100"/>
                                                        <state key="normal" title="1">
...
